<?xml version="1.0"?>
<package format="2">
  <name>pid_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luc001@e.ntu.edu.sg">rosdev</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <export>
  </export> -->
</package>
